# whisper-mcp

./: .gitignore  README.md  pyproject.toml
whisper_mcp/: __init__.py  __main__.py  transcribe.py
